[gd_scene load_steps=8 format=3 uid="uid://3ug1t30kx5j4"]

[ext_resource type="Script" path="res://UI/ui.gd" id="1_mfp3s"]
[ext_resource type="PackedScene" uid="uid://cimgwhgbt41ci" path="res://UI/game_over_screen.tscn" id="2_cw34c"]
[ext_resource type="PackedScene" uid="uid://blgxkiiadrh4k" path="res://UI/title_screen.tscn" id="2_jab8u"]
[ext_resource type="PackedScene" uid="uid://30y4r8nnjlcx" path="res://UI/in_game_hud.tscn" id="3_gnf21"]

[sub_resource type="Animation" id="Animation_afqco"]
resource_name = "title_fade_out"
length = 1.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("TitleScreen:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_rrblr"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("TitleScreen:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_k3syd"]
_data = {
"RESET": SubResource("Animation_rrblr"),
"title_fade_out": SubResource("Animation_afqco")
}

[node name="UI" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_mfp3s")

[node name="TitleScreen" parent="." instance=ExtResource("2_jab8u")]

[node name="InGameHUD" parent="." instance=ExtResource("3_gnf21")]
visible = false

[node name="GameOverScreen" parent="." instance=ExtResource("2_cw34c")]
visible = false

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_k3syd")
}

[connection signal="reset_highscore_pressed" from="TitleScreen" to="." method="_on_reset_highscore_pressed"]
[connection signal="start_button_pressed" from="TitleScreen" to="." method="_on_start_button_pressed"]
[connection signal="play_again_button_pressed" from="GameOverScreen" to="." method="_on_play_again_button_pressed"]
[connection signal="return_title_button_pressed" from="GameOverScreen" to="." method="_on_return_title_button_pressed"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
